Add landing page movie card query
